page d'acceuil fini

--- a/pages/home.html
+++ b/pages/home.html
@@ -5,3 +5,63 @@
        <button class="btn btn-primary">Réserver</button>
     </div>   
 </div>
+
+<section>
+    <article>
+        <div class="container p-4">
+            <h2 class="text-center text-primary">Bienvenue au Quai Antique</h2>
+            <div class="row -row-cols-2 align-items-center">
+                <div class="col">
+                    <p class="text-justify">
+                        Bienvenue sur le site notre restaurant gastronomique situé au coeur de la magnifique ville de Chambéry. Lechef Arnaud Michant vousinvite à découvrir unvoyage culinairemémorable. 
+                    </p>
+                </div>
+                <div class="col">
+                    <img class="w-100 rounded" src="../images/chef cuisinnier.jpeg">
+                </div>
+                </div>
+            </div>
+            <div class="text-center pt-4 mb-2">
+                <a href="#" class="btn btn-primary">Nos menus</a>
+            </div>
+        </div>
+    </article>
+        <article class="bg-black">
+        <div class="container p-4 text-white">
+            <h2 class="text-center text-primary">Nos produits frais</h2>
+            <div class="row -row-cols-2 align-items-center">
+                    <div class="col">
+                        <img class="w-100 rounded" src="../images/produits locaux.jpeg">
+                   </div>
+                <div class="col">
+                    <p class="text-justify">
+                        Découvrez la richesse des saveurs avec nos plats élaborés à partir de produits frais et de saison, cueillis localement.
+                    </p>
+                </div>
+                </div>
+            </div>
+            <div class="text-center pt-4 pb-2">
+                <a href="#" class="btn btn-primary">Voir la galerie</a>
+            </div>
+        </div>
+    </article>
+        <article>
+        <div class="container p-4">
+            <h2 class="text-center text-primary">Réservation en ligne</h2>
+            <div class="row -row-cols-2 align-items-center">
+                <div class="col">
+                    <p class="text-justify">
+                       Si vous souhaitez réserver une table c'est par ici , nous aurons le plaisir de vous compter parmis nos clients.
+                    </p>
+                </div>
+                <div class="col">
+                    <img class="w-100 rounded" src="../images/vue-salle-interieur.jpg">
+                </div>
+                </div>
+            </div>
+            <div class="text-center pt-4">
+                <a href="#" class="btn btn-primary">Réserver</a>
+            </div>
+        </div>
+    </article>
+</section>
