--- a/pages/home.html
+++ b/pages/home.html
@@ -41,7 +41,7 @@
                 </div>
             </div>
             <div class="text-center pt-4 pb-2">
-                <a href="#" class="btn btn-primary">Voir la galerie</a>
+                <a href="/galerie" class="btn btn-primary">Voir la galerie</a>
             </div>
         </div>
     </article>
