--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link"href="/">Acceuil</a>
+          <a class="nav-link"href="/index.html" data-link>Acceuil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/galerie">Galerie</a>
+          <a class="nav-link" href="/galerie" data-link>Galerie</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">La carte</a>
