--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -1,1 +1,46 @@
-<h1>Galerie</h1>
+<div class="hero-scene text-center text-white">
+    <div class="hero-scene-content">
+       <h1>Galerie</h1>
+    </div>   
+</div>
+
+<div class="container">
+    <div class="row row-cols-2 row-cols-lg-3">
+        <div class="col p-3">
+            <div class="image-card text-white">
+                <img src="../images/barista-6197867_640.jpg" class="rounded w-100">
+                <p class="titre-image">Titre</p>
+            </div>
+        </div>
+                <div class="col p-3">
+            <div class="image-card text-white">
+                <img src="../images/chef cuisinnier.jpeg" class="rounded w-100">
+                <p class="titre-image">Titre</p>
+            </div>
+        </div>
+                <div class="col p-3">
+            <div class="image-card text-white">
+                <img src="../images/lasagna-5994612_640.jpg" class="rounded w-100">
+                <p class="titre-image">Titre</p>
+            </div>
+        </div>
+                <div class="col p-3">
+            <div class="image-card text-white">
+                <img src="../images/plate-2802332_640.jpg" class="rounded w-100">
+                <p class="titre-image">Titre</p>
+            </div>
+        </div>
+                <div class="col p-3">
+            <div class="image-card text-white">
+                <img src="../images/wine-7522280_640.jpg" class="rounded w-100">
+                <p class="titre-image">Titre</p>
+            </div>
+        </div>
+                <div class="col p-3">
+            <div class="image-card text-white">
+                <img src="../images/salmon-1353598_640.jpg" class="rounded w-100">
+                <p class="titre-image">Titre</p>
+            </div>
+        </div>       
+    </div>
+</div>
