--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           <a class="nav-link" href="/galerie" data-link>Galerie</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">La carte</a>
+          <a class="nav-link" href="/carte" data-link>La carte</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">Les réservations</a>
