--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -5,42 +5,119 @@
 </div>
 
 <div class="container">
+    <div class="text-center">
+        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#editionphotomodal">Ajouter une photo</button>
+    </div>
     <div class="row row-cols-2 row-cols-lg-3">
         <div class="col p-3">
             <div class="image-card text-white">
                 <img src="../images/barista-6197867_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
+                <div class="action-image-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
+                </div>
             </div>
         </div>
                 <div class="col p-3">
             <div class="image-card text-white">
                 <img src="../images/chef cuisinnier.jpeg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
+                <div class="action-image-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>
+    </div>
                 <div class="col p-3">
             <div class="image-card text-white">
                 <img src="../images/lasagna-5994612_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
+                <div class="action-image-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>
+    </div>
                 <div class="col p-3">
             <div class="image-card text-white">
                 <img src="../images/plate-2802332_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
+                <div class="action-image-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>
+    </div>    
                 <div class="col p-3">
             <div class="image-card text-white">
                 <img src="../images/wine-7522280_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
+                <div class="action-image-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>
-                <div class="col p-3">
+    </div>            <div class="col p-3">
             <div class="image-card text-white">
                 <img src="../images/salmon-1353598_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
+                <div class="action-image-buttons">
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>       
     </div>
+        <div class="text-center">
+        <a href="#" class="btn btn-primary">Réserver</a>
+    </div>
+</div>
+<!-- Modal Edition -->
+<div class="modal fade" id="editionphotomodal" tabindex="-1" aria-labelledby="editionphotomodalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title fs-5" id="editionphotomodalLabel">Édition Photo</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+       <form>
+  <div class="mb-3">
+    <label for="namephotoinput" class="form-label">Titre</label>
+    <input type="text" class="form-control" id="namephotoinput" placeholder="ouvrier de AEA">
+  </div>
+  <div class="mb-3">
+    <label for="imageinput" class="form-label">Image</label>
+    <input type="file" class="form-control" id="imageinput">
+  </div>
+  <div class="text-center">
+      <button type="button" class="btn btn-primary">Enregistrer</button>
+  </div>
+</form>
+      </div>
+    </div>
+  </div>
+</div>
+<!-- Modal Edition -->
+<div class="modal fade" id="deletephotomodal" tabindex="-1" aria-labelledby="deletephotomodal" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h2 class="modal-title fs-5" id="deletephotomodalLabel">Êtes-vous sûr de vouloir supprimer cette photo ?</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+       <form>
+  <div class="mb-3">
+    <p>Titre</p>>
+    <img src="../images/lasagna-5994612_640.jpg" class="rounded w-100">
+  </div>
+  <div class="text-center">
+      <button type="button" class="btn btn-danger">Supprimer</button>
+      <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Annuler</button>
+  </div>
+</form>
+      </div>
+    </div>
+  </div>
 </div>
