ajout d'une modal pour annulation reservation

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
           <a class="nav-link" href="/carte" data-link>La carte</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="reserve" data-link>Les réservations</a>
+          <a class="nav-link" href="/reserve" data-link>Les réservations</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/account" data-link>Mon compte</a>
