--- a/pages/home.html
+++ b/pages/home.html
@@ -60,7 +60,7 @@
                 </div>
             </div>
             <div class="text-center pt-4">
-                <a href="#" class="btn btn-primary">Réserver</a>
+                <a href="/reserve" class="btn btn-primary" data-link>Réserver</a>
             </div>
         </div>
     </article>
