--- a/pages/allResa.html
+++ b/pages/allResa.html
@@ -4,7 +4,7 @@
     </div>   
 </div>
 <div class="container text-center pb-3">
-    <a href="/reserver" class="btn btn-primary">Réserver</a>
+    <a href="/reserver" class="btn btn-primary" data-link>Réserver</a>
 </div>
 
 <div class="container text-center allreservations">
