--- a/pages/galerie.html
+++ b/pages/galerie.html
@@ -69,7 +69,7 @@
         </div>       
     </div>
         <div class="text-center">
-        <a href="#" class="btn btn-primary">Réserver</a>
+        <a href="/reserve" class="btn btn-primary">Réserver</a>
     </div>
 </div>
 <!-- Modal Edition -->
