modification des dossier et ajout d'un serveur express js , pour le SPA

--- a/public/pages/galerie.html
+++ b/public/pages/galerie.html
@@ -69,7 +69,7 @@
         </div>       
     </div>
         <div class="text-center">
-        <a href="/reserve" class="btn btn-primary">Réserver</a>
+        <a href="/reserve" class="btn btn-primary" data-link>Réserver</a>
     </div>
 </div>
 <!-- Modal Edition -->
