--- a/public/pages/home.html
+++ b/public/pages/home.html
@@ -22,7 +22,7 @@
                 </div>
             </div>
             <div class="text-center pt-4 mb-2">
-                <a href="#" class="btn btn-primary">Nos menus</a>
+                <a href="#" class="btn btn-primary" data-link>Nos menus</a>
             </div>
         </div>
     </article>
