--- a/public/index.html
+++ b/public/index.html
@@ -6,8 +6,10 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Hind+Madurai:wght@300&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="./scss/main.css">
-    <script src="node_modules/bootstrap/dist/js/bootstrap.bundle.min.js" defer></script>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.13.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="/scss/main.css">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" defer></script>
     <title>Quai Antique</title>
 </head>
 <body>
@@ -22,16 +24,16 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
         <li class="nav-item">
-          <a class="nav-link"href="/index.html" data-link>Acceuil</a>
+          <a class="nav-link"href="/" data-link>Acceuil</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/galerie" data-link>Galerie</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/carte" data-link>La carte</a>
+          <a class="nav-link" href="/carte" data-link> La carte</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="/reserve" data-link>Les réservations</a>
+          <a class="nav-link" href="/reserve" data-link>Mes réservations</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="/account" data-link>Mon compte</a>
@@ -68,7 +70,7 @@
         </div>
       </footer>
 
-  <script type="module" src="./Router/router.js"></script>
+  <script type="module" src="/js/Router/router.js"></script>
 
 </body>
 </html>
