--- a/public/pages/auth/signin.html
+++ b/public/pages/auth/signin.html
@@ -15,7 +15,7 @@
     <input type="password" class="form-control" id="passwordinput">
   </div>
   <div class="text-center">
-      <button type="submit" class="btn btn-primary">Connexion</button>
+      <button type="button" class="btn btn-primary" id="btnsignin">Connexion</button>
   </div>
 </form>
    <div class="text-center pt-3">
