--- a/public/pages/galerie.html
+++ b/public/pages/galerie.html
@@ -14,8 +14,8 @@
                 <img src="../images/barista-6197867_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
                 <div class="action-image-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
                 </div>
             </div>
         </div>
@@ -24,8 +24,8 @@
                 <img src="../images/chef cuisinnier.jpeg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
                 <div class="action-image-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>
     </div>
@@ -34,8 +34,8 @@
                 <img src="../images/lasagna-5994612_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
                 <div class="action-image-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>
     </div>
@@ -44,8 +44,8 @@
                 <img src="../images/plate-2802332_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
                 <div class="action-image-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>
     </div>    
@@ -54,8 +54,8 @@
                 <img src="../images/wine-7522280_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
                 <div class="action-image-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>
     </div>            <div class="col p-3">
@@ -63,8 +63,8 @@
                 <img src="../images/salmon-1353598_640.jpg" class="rounded w-100">
                 <p class="titre-image">Titre</p>
                 <div class="action-image-buttons">
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
-                    <button type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-pencil-square" data-bs-toggle="modal" data-bs-target="#editionphotomodal"></i></button>
+                    <button data-show="admin" type="button" class="btn btn-outline-light"><i class="bi bi-trash" data-bs-toggle="modal" data-bs-target="#deletephotomodal"></i></button>
             </div>
         </div>       
     </div>
