--- a/public/pages/auth/signin.html
+++ b/public/pages/auth/signin.html
@@ -9,6 +9,9 @@
   <div class="mb-3">
     <label for="emailinput" class="form-label">Email</label>
     <input type="email" class="form-control" id="emailinput" placeholder="test@email.fr">
+    <div class="invalid-feedback">
+      Le mail et le mot de passe ne corresponde pas !
+    </div>
   </div>
   <div class="mb-3">
     <label for="passwordinput" class="form-label">Mot de passe</label>
